# clipkeeper

./: CHANGELOG.md  README.md  clipkeeper.py  pyproject.toml
.tx/: config
clipkeeper/: __init__.py  __main__.py  application.py  cli.py  clipboard_entry.py  clipboard_monitor.py  main_window.py  preferences_window.py  secure_storage.py  shortcuts_window.py
data/: se.danielnylander.clipkeeper.desktop
debian/: changelog  control  copyright  rules
man/: clipkeeper.1
po/: README.md  clipkeeper.pot  sv.po
rpm/: clipkeeper.spec
